--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cytoscape": "^3.25.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.8",
     "react-modal": "^3.16.1",
